<resources>
    <string name="app_name">TwitterClone</string>
    <string name="str_welcome_text">See what\'s happening in the world right now</string>
    <string name="str_create_account">Create account</string>
    <string name="str_have_account">Have an account already?</string>
    <string name="str_log_in">Log in</string>
    <string name="str_create_your_account">Create your account</string>
    <string name="str_name">Name</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="str_create">Create</string>
    <string name="str_logo">logo</string>
    <string name="str_email">Email</string>
    <string name="log_in_to_twitter">Log in to Twitter.</string>
    <string name="log_in">Log in</string>
    <string name="password">Password</string>
    <string name="your_email">Your email</string>
</resources>